public enum GameState
{
    INIT, 
    BLACK_TURN, 
    WHITE_TURN, 
    GAME_END
}